--- a/components/Badges/UserAvatar.module.css
+++ b/components/Badges/UserAvatar.module.css
@@ -1,6 +1,6 @@
 .avatar {
-  width: 50px;
-  height: 50px;
+  width: 2.8125rem;
+  height: 2.8125rem;
   border-radius: 50%;
   background-color: var(--color-background-light);
   color: var(--text-dark-1);
