--- a/app/participants/components/ParticipantsCards.module.css
+++ b/app/participants/components/ParticipantsCards.module.css
@@ -8,11 +8,8 @@
   justify-content: flex-start;
   align-items: center;
   padding: 1.2rem 0.5rem 0 0.5rem;
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: static;
   width: 100%;
-  height: 100%;
 }
 
 .expandedOverlay .textInfo {
