--- a/app/participants/components/ParticipantsCards.module.css
+++ b/app/participants/components/ParticipantsCards.module.css
@@ -1,6 +1,6 @@
 .expandedOverlay {
   background: rgba(255,255,255,0.97);
-  z-index: 20;
+  z-index: 10;
   border-radius: 30px 30px 30px 30px !important;
   box-shadow: 0 4px 32px 0 rgba(0,0,0,0.18);
   display: flex;
@@ -8,13 +8,10 @@
   justify-content: flex-start;
   align-items: center;
   padding: 1.2rem 0.5rem 0 0.5rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: static;
   width: 100%;
-  height: 100%;
+  overflow: auto;
+  min-height: 500px;
 }
 
 .expandedOverlay .textInfo {
