--- a/app/participants/components/ParticipantsCards.module.css
+++ b/app/participants/components/ParticipantsCards.module.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
   padding: 1.2rem 0.5rem 0 0.5rem;
   position: static;
   width: 100%;
@@ -106,7 +105,7 @@
   color: var(--text-light);
   text-align: right;
   font-size: 1.375rem;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .crowd,
@@ -229,6 +228,7 @@
 .row2 {
   display: flex;
   flex-direction: row;
-  justify-content:center;
-  align-items: center;
+  justify-content:flex-start;
+  align-items: flex-start;
+  padding: 10px;
 }
