fixed icons on cards

--- a/app/participants/components/ParticipantsCards.module.css
+++ b/app/participants/components/ParticipantsCards.module.css
@@ -143,6 +143,19 @@
   margin-left: 6px;
 }
 
+.startDate,
+.meetingTime,
+.host,
+.participantCount {
+  width: 50%;
+  align-self: center;
+}
+
+.meetingTime {
+  white-space: pre-line;
+
+}
+
 
 
 /* .group-description.clamped */
