--- a/components/Cards/UserCard.module.css
+++ b/components/Cards/UserCard.module.css
@@ -28,9 +28,18 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
-  cursor: pointer;
-  
+
   min-width: 0;
+
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
+  user-select: none;
+}
+
+.name:active,
+.name:hover {
+  transform: scale(0.95);
+  opacity: 0.8;
 }
 
 .name {
@@ -39,6 +48,7 @@
   font-weight: 500;
   text-align: right;
   line-height: 132%;
+  cursor: pointer;
 
   color: var(--text-dark-1);
 
