--- a/app/participants/components/ParticipantsCards.module.css
+++ b/app/participants/components/ParticipantsCards.module.css
@@ -68,6 +68,8 @@
   flex-direction: row-reverse;
   justify-content: space-between;
   padding: 1rem;
+  height: 303px;
+
 
 }
 
@@ -89,7 +91,7 @@
 
 .description.clamped {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   max-height: 4.5em;
@@ -105,7 +107,9 @@
 
 .textInfo {
   padding: 1rem;
-  gap: 10px;
+  gap: 12px;
+  display: flex;
+  flex-direction: column;
 
 }
 
@@ -114,6 +118,7 @@
   text-align: right;
   font-size: 1.375rem;
   font-weight: 600;
+  line-height: 1rem;
 }
 
 .crowd,
@@ -122,7 +127,7 @@
   text-align: right;
   font-size: 1.25rem;
   font-weight: 400;
-  line-height: 122%;
+  line-height: 120%;
   margin-bottom: 10px;
 }
 
@@ -155,7 +160,6 @@
 .meetingTime,
 .host,
 .participantCount {
-  width: 50%;
   align-self: center;
 }
 
@@ -201,7 +205,6 @@
   text-decoration-thickness: auto;
   text-underline-offset: auto;
   text-underline-position: from-font;
-  margin-top: 5px;
 }
 
 /* --- Whatsapp Link Utility --- */
@@ -243,6 +246,7 @@
   width: auto;
   flex: unset;
   display: inline-flex;
+  height: fit-content;
 }
 
 .row1,
@@ -251,5 +255,7 @@
   flex-direction: row;
   justify-content:flex-start;
   align-items: flex-start;
-  padding: 10px;
+  padding: 0.125rem 1rem;
+  gap: 0.75rem;
+
 }
